Fixed navbar z-index across sub-pages as well as index.html + Welcome section know more button now will not include the section id in the url + Dynamic function "scrollToSection" is added

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,11 +1,11 @@
-/*NORMAL NAVBAR*/
+/*NORMAL NAVBAR (MAIN)*/
 .navbar {
     color: var(--text-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px 90px;
-    z-index: 100;
+    z-index: 10000000000000;
     position: sticky;
     top: 0;
     box-shadow: 1px 1px 90px rgba(0, 0, 51, 0.61);
@@ -88,7 +88,11 @@
 .menu-toggle {
     display: none;
 }
-
+/*CUSTOM NAVBAR TAG*/
+wafiq5-navbar{
+    position: sticky;
+    z-index: 1000000000;
+}
 /*BUBBLE NAVBAR*/
 .bubble-navbar {
     color: var(--text-color);
@@ -99,7 +103,7 @@
     padding-top: 10px;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 10000000000000;
     transition: all 0.3s ease;
     animation: bubble_navbar_appear .8s ease-in-out;
 }
